Fixed html bugs

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -1,86 +1,82 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
-<head>
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-</head>
-<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
-<div class=Section1> 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
+  <title>Java search</title>
+</head><body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
+<div class="Section1"> 
   <h1>Java search</h1>
-  <p class=MsoNormal><span style='font-size:10.0pt'>The Java searching support 
+  <p class="MsoNormal"><span style="font-size: 10pt; ">The Java searching support 
     allows you to find precise declarations and references of Java elements (packages, 
     types, methods, fields). Searching is supported by an index that is kept up 
     to date in the background as the resources corresponding to Java elements 
     are changed. The Java search does not need the workspace to have ever been 
     built. It is still possible to conduct searches when auto-build is turned 
     off.</span></p>
-  <p class=para>The following searches can be conducted from the pop-up menus 
+  <p class="para">The following searches can be conducted from the pop-up menus 
     of Java elements:</p>
-  <table border=1 cellspacing=0 cellpadding=0>
+  <table border="1" cellspacing="0" cellpadding="0">
     <thead> 
     <tr> 
       <td> 
-        <p class=para align=center style='text-align:center'><b>Command</b></p>
+        <p class="para" align="Center" style="text-align: center; "><b>Command</b></p>
       </td>
       <td> 
-        <p class=para align=center style='text-align:center'><b>Description</b></p>
+        <p class="para" align="Center" style="text-align: center; "><b>Description</b></p>
       </td>
     </tr>
     </thead> 
-    <tr> 
-      <td valign=top> 
-        <p class=para>References</p>
+    <tbody><tr> 
+      <td valign="Top"> 
+        <p class="para">References</p>
       </td>
-      <td valign=top> 
-        <p class=para>Finds all references to the selected Java element</p>
-      </td>
-    </tr>
-    <tr> 
-      <td valign=top> 
-        <p class=para>Declarations </p>
-      </td>
-      <td valign=top> 
-        <p class=para>Finds all declarations of the selected Java element</p>
+      <td valign="Top"> 
+        <p class="para">Finds all references to the selected Java element</p>
       </td>
     </tr>
     <tr> 
-      <td valign=top> 
-        <p class=para>Implementors</p>
+      <td valign="Top"> 
+        <p class="para">Declarations </p>
       </td>
-      <td valign=top> 
-        <p class=para>Finds all implementors of the selected Java interface</p>
-      </td>
-    </tr>
-    <tr> 
-      <td valign=top> 
-        <p class=para>Read access</p>
-      </td>
-      <td valign=top> 
-        <p class=para>Finds all read accesses to the selected Java field</p>
+      <td valign="Top"> 
+        <p class="para">Finds all declarations of the selected Java element</p>
       </td>
     </tr>
     <tr> 
-      <td valign=top> 
-        <p class=para>Write access </p>
+      <td valign="Top"> 
+        <p class="para">Implementors</p>
       </td>
-      <td valign=top> 
-        <p class=para>Finds all write accesses to the selected Java field</p>
+      <td valign="Top"> 
+        <p class="para">Finds all implementors of the selected Java interface</p>
       </td>
     </tr>
-  </table>
+    <tr> 
+      <td valign="Top"> 
+        <p class="para">Read access</p>
+      </td>
+      <td valign="Top"> 
+        <p class="para">Finds all read accesses to the selected Java field</p>
+      </td>
+    </tr>
+    <tr> 
+      <td valign="Top"> 
+        <p class="para">Write access </p>
+      </td>
+      <td valign="Top"> 
+        <p class="para">Finds all write accesses to the selected Java field</p>
+      </td>
+    </tr>
+  </tbody></table>
   <p>Searches can be performed on various scopes:</p>
-  <p><b>Workspace</b> &#8211; all projects and files in them are included in this 
+  <p><b>Workspace</b> - all projects and files in them are included in this 
     search</p>
-  <p><b>Hierarchy</b> &#8211; only the type hierarchy of the selected element 
-    (or its declaring type&#8217;s) is included in this search</p>
-  <p><b>Working Set</b> &#8211; only resources that belong to the chosen working 
+  <p><b>Hierarchy</b> - only the type hierarchy of the selected element 
+    (or its declaring type's is included in this search</p>
+  <p><b>Working Set</b> - only resources that belong to the chosen working 
     set are is included in this search</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
-alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
-  <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-79.htm">Searching Java code</a></p>
+  <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="../tasks/tasks-79.htm">Searching Java code</a></p>
 </div>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
 </p>
-</body>
-</html>
+</body></html>
