--- a/bundles/org.eclipse.platform.doc.user/concepts/crhview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/crhview.htm
@@ -4,34 +4,31 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Resource History view</title>
+<title>CVS Resource History view</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Resource History view</H1>
+<H1 CLASS="Head"> CVS Resource History view</H1>
 
-<P CLASS="Intro">
-This view provides a list of all the versions of a resource in the repository.
-From this view you can compare two versions, add a version to the workbench, or
-open an editor on a version.<P CLASS="Para">Here is what the Resource
-History View looks like:</P>
+<P CLASS="Intro"> This view provides a list of all the revisions of a resource 
+  in the repository. From this view you can compare two revisions, replace (get 
+  sticky) or revert (get contents) the corresponing workspace file to the revision, 
+  or open an editor on a revision.
+<P CLASS="Para">Here is what the CVS Resource History View looks like:</P>
 <P CLASS="Para"><img align="texttop" border="0" src="../images/Image216_history_view.jpg" alt="CVS Resource History View"></P>
 <P CLASS="Para">For each resource, the following is displayed in the table.</P>
 <DIV CLASS="Topic">
-<h2>
-Version</h2>
-<P CLASS="Para">
-This column displays the version name of the version
-in the history.&nbsp; In parentheses, versions of the project that hold that
-version of the resource are listed.</P>
+  <h2> Revision</h2>
+  <P CLASS="Para"> This column displays the revision number of the revision in 
+    the history.&nbsp; </P>
+  <h2 CLASS="Para">Tags</h2>
+  <P CLASS="Para">The tags that are associated with the revision. Selecting a 
+    revision line will list the tags in the pane in the lower left of the view.</P>
 </DIV>
 <DIV CLASS="Topic">
-<h2>
-Created</h2>
-<P CLASS="Para">
-This column displays the creation date and time of
-the version in the history.</P>
+  <h2> Date</h2>
+  <P CLASS="Para"> This column displays the creation date and time of the revision 
+    in the history.</P>
 </DIV>
 <DIV CLASS="Topic">
 <h2>
@@ -43,14 +40,16 @@ created and authored the version.</P>
 <DIV CLASS="Topic">
 <h2>
 Comment</h2>
-<P CLASS="Para">
-This column displays the comment (if any) supplied
-for this version at the time it was released.</P>
+  <P CLASS="Para"> This column displays the comment (if any) supplied for this 
+    revision at the time it was commited. Selecting a revision line will show 
+    the complete comment in the pane in the lower right of the view.</P>
 </DIV>
-<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-12.htm"><br>
+
+<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<a href="concepts-12.htm"><br>
 Resources</a><a href="concepts-27c.htm"><br>
-Repositories<br>
-</a><a href="concepts-27v.htm">Repositories view</a><a href="concepts-17a.htm"><br>
+CVS Repositories<br>
+</a><a href="concepts-27v.htm">CVS Repositories view</a><a href="concepts-17a.htm"><br>
 Local history</a>
 </P>
 
