cleaned up word tags

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
@@ -5,116 +5,78 @@
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Creating a Java project with source folders</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Creating a Java project with source folders</h1>
-
-<p class=para>For larger projects, create a project with source folders.</p>
-
-<p class=para><b>Note</b>: When using source folders, non-Java resources are
-copied to the output folder by the Java builder. If you have non-Java resources
-(documentation, for example) that should not be copied into the output folder,
-you can create an ordinary folder and store the resources there. You can also
-use the preference page <b>Window &gt; Preferences &gt; Java &gt; Compiler &gt;
-Other</b> to specify a list of resources that will not be automatically copied
-to the output folder.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>From the main workbench window, click <b>File</b> &gt; <b>New</b>
-&gt; <b>Project</b>. The New Project wizard opens.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select <b>Java</b> from the left pane and <b>Java Project </b>from
-the right pane, then click <b>Next</b>. The New Java Project wizard opens.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the <span class=label><b>Project Name</b></span> field,
-type a name for your new Java project.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Check or clear the <b>Use default</b> check box to indicate
-whether you want to use the default location for your new project. If you clear
-this check box, then type or click <b>Browse</b> to select a location for the
-project. Click <span class=label><b>Next</b></span>. The Java Settings Page
-opens.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>On the <b>Source</b> tab, select the <b>Use source folders
-contained in the project </b>radio button to use project subfolders as source
-containers.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Optionally, click the <span class=label><b>Create New Folder</b></span>
-button to create new source folder. You can also create new source folders at
-any time later.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Optionally, replace the default name in the <span class=label><b>Build
-output folder</b></span> field to use a different name for the output folder.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>On the <b>Projects</b> tab, select the required projects to be
-on the build path for this project.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>On the <b>Libraries</b> tab, select JAR files and CLASS file
-containers to add to the build path for this new project and attach source to
-the JAR files.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>10.<span style='font:7.0pt "Times New Roman"'>&nbsp;
-</span><![endif]>On the <b>Order and Export</b> tab, use the <span class=label><b>Up</b></span>
-and <span class=label><b>Down</b></span> buttons to move the selected JAR file
-or CLASS file container up or down in the build path order for this new
-project.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>11.<span style='font:7.0pt "Times New Roman"'>&nbsp;
-</span><![endif]>Click <span class=label><b>Finish</b></span> when you are
-done.</p>
-
-<p class=para><b>Note:</b> When you are using CVS as your repository then it is
-recommended that you create a .cvsignore file inside the project. In this file,
-add a line with the name of the output folder (&quot;bin&quot; for example).
-Adding the output folder in the .cvsignore file ensures that the CVS versioning
-support ignores the output folder in versioning operations.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Creating a Java project with source folders</h1>
+  <p class=para>For larger projects, create a project with source folders.</p>
+  <p class=para><b>Note</b>: When using source folders, non-Java resources are 
+    copied to the output folder by the Java builder. If you have non-Java resources 
+    (documentation, for example) that should not be copied into the output folder, 
+    you can create an ordinary folder and store the resources there. You can also 
+    use the preference page <b>Window &gt; Preferences &gt; Java &gt; Compiler 
+    &gt; Other</b> to specify a list of resources that will not be automatically 
+    copied to the output folder.</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> From the main workbench window, click <b>File</b> &gt; <b>New</b> 
+    &gt; <b>Project</b>. The New Project wizard opens.</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select <b>Java</b> from the left pane and <b>Java Project </b>from 
+    the right pane, then click <b>Next</b>. The New Java Project wizard opens.</p>
+  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the <span class=label><b>Project Name</b></span> field, type a 
+    name for your new Java project.</p>
+  <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Check or clear the <b>Use default</b> check box to indicate whether 
+    you want to use the default location for your new project. If you clear this 
+    check box, then type or click <b>Browse</b> to select a location for the project. 
+    Click <span class=label><b>Next</b></span>. The Java Settings Page opens.</p>
+  <p class=para> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> On the <b>Source</b> tab, select the <b>Use source folders contained 
+    in the project </b>radio button to use project subfolders as source containers.</p>
+  <p class=para> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Optionally, click the <span class=label><b>Create New Folder</b></span> 
+    button to create new source folder. You can also create new source folders 
+    at any time later.</p>
+  <p class=para> 7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Optionally, replace the default name in the <span class=label><b>Build 
+    output folder</b></span> field to use a different name for the output folder.</p>
+  <p class=para> 8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> On the <b>Projects</b> tab, select the required projects to be on 
+    the build path for this project.</p>
+  <p class=para> 9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> On the <b>Libraries</b> tab, select JAR files and CLASS file containers 
+    to add to the build path for this new project and attach source to the JAR 
+    files.</p>
+  <p class=para> 10.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span> 
+    On the <b>Order and Export</b> tab, use the <span class=label><b>Up</b></span> 
+    and <span class=label><b>Down</b></span> buttons to move the selected JAR 
+    file or CLASS file container up or down in the build path order for this new 
+    project.</p>
+  <p class=para> 11.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span> 
+    Click <span class=label><b>Finish</b></span> when you are done.</p>
+  <p class=para><b>Note:</b> When you are using CVS as your repository then it 
+    is recommended that you create a .cvsignore file inside the project. In this 
+    file, add a line with the name of the output folder (&quot;bin&quot; for example). 
+    Adding the output folder in the .cvsignore file ensures that the CVS versioning 
+    support ignores the output folder in versioning operations.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-3.htm">Java projects</a><br>
-<a href="..\concepts\concepts-4.htm">Java builder</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-3.htm">Java projects</a><br>
+    <a href="..\concepts\concepts-4.htm">Java builder</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="tasks-26.htm">Creating a new source folder</a><br>
-<a href="..\tasks\tasks-13.htm">Creating a Java project as its own source
-container</a><br>
-<a href="..\tasks\tasks-15.htm">Creating a new Java package</a><br>
-<a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
-<a href="..\tasks\tasks-25.htm">Creating a new interface in a compilation unit</a><br>
-<a href="..\tasks\tasks-149.htm">Creating a Java scrapbook page</a><br>
-<a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
-<a href="..\tasks\tasks-12.htm">Organizing Java projects</a></p>
-
-<p><br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="tasks-26.htm">Creating a new source folder</a><br>
+    <a href="..\tasks\tasks-13.htm">Creating a Java project as its own source 
+    container</a><br>
+    <a href="..\tasks\tasks-15.htm">Creating a new Java package</a><br>
+    <a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
+    <a href="..\tasks\tasks-25.htm">Creating a new interface in a compilation 
+    unit</a><br>
+    <a href="..\tasks\tasks-149.htm">Creating a Java scrapbook page</a><br>
+    <a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
+    <a href="..\tasks\tasks-12.htm">Organizing Java projects</a></p>
+  <p><br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
