fixed some English issues

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -10,12 +10,15 @@
   </head>
 
   <body>
-    <h1 class="Head">Preparing the Workbench</h1>
+
+    <h1 class="Head">Getting Started</h1>
 
     <p class="Para">
       This tutorial is designed to get you started on using the
       Java Development Toolkit (JDT) in the workbench.
     </p>
+
+    <h1 class="Head">Preparing the Workbench</h1>
 
     <p class="Para">
       In this section, you will verify that the workbench is properly set up
@@ -32,14 +35,14 @@
         default settings.
       </li>
       <li class="Item">
-        You are familiar with the basic workbench mechanisms
-        (e.g., views, perspectives, etc.)
+        You are familiar with the basic workbench mechanisms,
+        such as views and perspectives.
       </li>
     </ul>
 
     <p class="Para">
       If you're not familiar with the basic workbench mechanisms,
-      read first the <span>Getting Started</span> chapter of the
+      please see the <span>Getting Started</span> chapter of the
       <span>Workbench User Guide</span>.
     </p>
 
@@ -63,7 +66,7 @@
         </p>
         
         <p class="Para">
-          Ensure that a JRE has been detected. By default, the JRE used to run
+          Confirm that a JRE has been detected. By default, the JRE used to run
           the workbench will be used to build and run Java programs. It should
           appear with a check mark in the list of installed JREs.
         </p>
@@ -83,7 +86,7 @@
         </p>
 
         <p class="Para">
-          Ensure that the <span class="Label">
+          Confirm that the <span class="Label">
           Perform build automatically on resource modification</span>
           option is checked.
         </p>
@@ -103,7 +106,7 @@
         </p>
 
         <p class="Para">
-          Ensure that
+          Confirm that
           <span class="Label">As source and output location use</span>
           is set to <span class="Label">Project</span>.
         </p>
