--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -30,9 +30,9 @@
 
       <li>
         <p class="Para">
-          In the left pane of the first wizard page, select
+          On the left pane of the first wizard page, select
           <span class="Label">Java</span>,
-          and in the right pane, select <span class="Label">Java Project</span>.
+          and on the right pane, select <span class="Label">Java Project</span>.
           Then click <span class="Label">Next</span>.
         </p>
 
@@ -40,14 +40,14 @@
           In the <span class="Label">Project name</span> field,
           type &quot;JUnit&quot;, then click
           <span class="Label">Finish</span>.
-          Notice that a new Java perspective opens with the new Java project
+          A new Java perspective opens with the new Java project
           in the Package Explorer.
         </p>
 
         <p class="Para">
-          Notice the new menu options and Java specific buttons in the
-          workbench toolbar that are loaded along with some of the views
-          in the Java perspective. Depending on which view or editor
+          Along with the new Java perspective, new menu options and
+          Java specific buttons are loaded in the workbench toolbar.
+          Depending on which view or editor
           is active, other buttons and menu options will be available.
         </p>
 
@@ -89,8 +89,8 @@ org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
         <p class="Para">
           You can expand and select elements within the
           <span class="Filename">junit</span>
-          directory on the left side to see the individual resources that
-          you are importing displayed on the right side.
+          directory on the left pane to view the individual resources that
+          you are importing on the right pane.
         </p>
 
         <div class="Note">
@@ -126,7 +126,7 @@ org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
  
       <li>
         <p class="Para">
-          In the Package Explorer, expand the JUnit project and notice the JUnit
+          In the Package Explorer, expand the JUnit project to view the JUnit
           packages.
         </p>
 
