--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -27,7 +27,7 @@
       <li> 
         <p class="Para">
           Expand the package <code>junit.framework</code> and find
-          the Java files of the package.
+          the Java files contained in the package.
         </p>
       </li>
 
