--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -32,7 +32,7 @@
 
       <li>
         <p class="Para">
-          Notice the syntax highlighting. Examples for parts of java source
+          Notice the syntax highlighting. Examples of parts of java source
           which are rendered differently are:
         </P>
 
@@ -51,11 +51,11 @@
       <li>
         <p class="Para">
           Look at the Outline view.
-          Notice that it displays an outline of the Java file
+          It displays an outline of the Java file
           including the package declaration, import declarations,
           fields, types and methods.
 
-          Also notice how the Outline view indicates whether a Java element
+          The Outline view also indicates whether a Java element
           is static, abstract, final, etc.
         </p>
 
@@ -97,7 +97,7 @@
         </p>
 
         <p class="Para">
-          In the Outline view, select various elements and note that only
+          Next, In the Outline view, select any element and note that only
           the selected element is displayed in the Java editor.
         </p>
 
@@ -108,14 +108,16 @@
 
       <li>
         <p class="Para">
-          Press the same button again to see the whole Java file again.
+          Press the
+          <span class="Label">Show Source of Selected Element Only</span>
+          button again to see the whole Java file again.
         </P>
 
         <p class="Para">
-          In the Outline view, select various elements and note that they
+          In the Outline view, select different elements and note that they
           are once again displayed in a whole file view in the editor.
-          Notice that now, the Outline view selection is indicated with a
-          range indicator in the vertical ruler attached to the left of the
+         The Outline view selection is now indicated with a
+          range indicator on the vertical ruler on the left border of the
           Java editor.
         </p>
 
@@ -134,7 +136,7 @@
     <ol>
       <li>
         <p class="Para">
-          Ensure that the alphabetical Sort button in the toolbar of the Outline view
+          Confirm that the alphabetical Sort button in the toolbar of the Outline view
           is toggled off.
         </P>
       </li>
@@ -166,9 +168,8 @@
         <p class="Para">
           The compilation unit is compiled automatically and
           errors show up in the Package Explorer, in the Tasks view and on the
-          vertical ruler. Notice that in the Package Explorer,
-          the errors are propagated up to the project of the
-          compilation unit containing the error.
+          vertical ruler. In the Package Explorer, the errors are propagated
+          up to the project of the compilation unit containing the error.
         </p>
 
         <div class="Snapshot">
@@ -203,7 +204,7 @@
     <h2>Deleting and Replacing a Method from the Local History</h2>
 
     <p class="Para">
-      In this section, you will use the local history feature to easily switch
+      In this section, you will use the local history feature to switch
       to a previously saved version of an individual Java element.
     </p>
 
@@ -211,7 +212,7 @@
       <li>
         <p class="Para">
           Delete the method you just created by selecting it in the Outline view
-          and clicking <span class="Label">Delete it</span> from the
+          and clicking <span class="Label">Delete</span> from the
           context menu.
         </p>
       </li>
@@ -230,7 +231,7 @@
 }</pre>
 
         <p class="Para">
-          Save the file when you are done.
+          Save the file.
         </p>
       </li>
 
@@ -247,7 +248,7 @@
           In the
           <span class="Label">Replace Java Element from Local History</span>
           dialog, the Local History list shows the various saved states of
-          that element, and the Java Source Compare pane shows details
+          that element. The Java Source Compare pane shows details
           of the differences between the selected history resource and
           the existing workbench resource.
         </p>
@@ -264,7 +265,8 @@
         </p>
 
         <p class="Para">
-          The code in the editor is replaced with the history version.
+          In the Java editor, the method is replaced with the selected
+          history version.
         </p>
       </li>
 
@@ -317,7 +319,7 @@ assert</pre>
 
         <p class="Para">
           The content assist window with a list of proposals will appear.
-          Scroll down a bit in the list to see the available choices.
+          Scroll the list to see the available choices.
         </p>
 
         <div class="Snapshot">
@@ -329,7 +331,7 @@ assert</pre>
         <p class="Para">
           With the content assist window still active, type the letter
           't' after <code>assert</code> (with no space in between).
-          The list is narrowed and now only shows entries starting with
+          The list is narrowed and only shows entries starting with
           'assertt'.
         </p>
 
@@ -412,16 +414,15 @@ assert</pre>
           <img src="../images/qs-19.gif" alt="Organize Imports" />
         </div>
         
-        <div class="Note"><p class="Para">
-          Note: Alternatively, you could have invoked
-          <span class="Label">Organize Imports</span>
-          directly from the context menu of the import declarations
-          in the Outline view.
-        </p></div>
+        <p class="Para">
+          Alternatively, <span class="Label">Organize Imports</span> 
+          can be invoked directly from the context menu of the
+          import declarations in the Outline view.
+        </p>
 
         <div class="Note"><p class="Para">
-          Note: You can control the order of the import statement in the
-          preferences pages
+          Note: You can specify the order of the import declarations in
+          <span class="Label">Preferences</span>
           (Window &gt; Preferences &gt; Java &gt; Organize Imports).
         </p></div>
       </li>
@@ -590,7 +591,7 @@ while (Test.class.isAssignableFrom(superClass)) {
 
         <div class="Note">
         <p class="Para">
-          Note: You can also open editors on the types and methods in the
+          Note: You can also open editors on types and methods in the
           Hierarchy view.
         </p></div>
 
