*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100.htm
@@ -10,40 +10,28 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Creating a version of a project</H1>
-<P CLASS="Para">
-<b>Prerequisite</b>: The project that you want to version must first be associated with a stream. </P>
-<P CLASS="Para">
-<b>Tip</b>: It is often preferable to synchronize resources with the stream 
-before versioning. </P>
+<P CLASS="Para"> <b>Prerequisite</b>: The project that you want to version must 
+  first be in the workspace. </P>
+<P CLASS="Para"> <b>Tip</b>: It is often preferable to synchronize resources with 
+  the CVS repository before versioning. This will ensure that there are no outstanding 
+  incoming or outgoing changes that might be accidentally excluded from the version.</P>
 <P CLASS="Para">
 To make a version of a project: </P>
 <ol>
   <li>
-<P CLASS="Para">
-In the Navigator view, select the project that you want to version to the 
-repository.</P>
+    <P CLASS="Para"> In the Navigator view, select the project that you want to version.</P>
   </li>
   <li value="2">
-<P CLASS="Para">
-From the project's pop-up menu, select <b> Team &gt; Version from Workspace</b>. The 
-Version Selected Resources page opens.</P>
+    <P CLASS="Para"> From the project's context menu, select <b> Team &gt; Tag 
+      as Version...</b>.</P>
   </li>
-  <li>Select the version name option that you want to enable for the selected 
-  project. (You can only choose the version label at the project level. Other
-    types of resources are versioned when released.)</li>
-  <li>Click <b> OK</b> to close the Version Selected Resources page and create 
-  the version of your project.</li>
+  <li>Enter the name of the version you wish to create.</li>
+  <li>Click <b> OK</b> to close the Tag Resources dialog and create the version.</li>
 </ol>
-<p><b>Tips</b>:&nbsp;</p>
-
-
-<ul>
-  <li> You can change the initial version label that appears in the Version
-Selected Resources page by selecting <b>Workbench</b> &gt; <b>Preferences &gt;
-Team &gt; Initial version name. </b>Type the alphanumeric 
-label that you want to use as the initial automatically generated version label 
-for projects that are versioned for the first time.</li>
-</ul>
+<p><b>Tip</b>:&nbsp; You can browse existing versions of your project by clicking 
+  on the <b>Details</b> button in the Tag Resources dialog. Clicking <b>Refresh 
+  from Repository</b> should populate the Existing Versions list. It is sometimes 
+  helpful to see existing versions before naming your new version.</p>
 
 
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-27.htm"><br>
