--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-118.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-118.htm
@@ -9,41 +9,27 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Versioning projects in the team stream</H1>
-<P CLASS="Para">
-You can version a project in the stream without
-adding the project to the workbench.</P>
+Versioning projects in the repository</H1>
+<P CLASS="Para"> You can version a project in the repository without adding the 
+  project to the workbench.</P>
 <ol>
-  <li>
-    <p CLASS="Para">Switch to the Team perspective or add the Repositories view
-    to the current perspective.</li>
-  <li>
-    <p CLASS="Para">In the Repositories view, expand a repository location and
-    its streams.</li>
-  <li>
-    <p CLASS="Para">
-Select one or more streams that hold the projects whose contents you want to
-version.&nbsp;&nbsp;</li>
-  <li>
-    <p CLASS="Para">Right-click and select <b>Version from Stream</b> from the
-    pop-up menu. The Version Selected Resources window opens.</li>
-  <li>
-    <p CLASS="Para">Select one of the following version label options for the
-    selected projects:
-    <ul>
-<LI CLASS="Item">
-<b>Automatic: </b>each project's version label is automatically generated&nbsp;</LI>
-<LI CLASS="Item">
-<b>
-One Name:</b> the version label for each project is one name that you specify</LI>
-<LI CLASS="Item">
-<b>
-Name Each:</b> for each project, you are prompted to enter a version label</LI>
-    </ul>
+  <li> 
+    <p CLASS="Para">Switch to the CVS Repository Exploring perspective or add 
+      the CVS Repositories view to the current perspective.
   </li>
-  <li>
-Click <b>OK</b> to close the window.</li>
+  <li> 
+    <p CLASS="Para">In the CVS Repositories view, expand a repository location 
+      and find the project you wish to version.
+  </li>
+  <li>Right-click on the project and select <b>Tag as Version...</b>.</li>
+  <li>Enter the name of the version you wish to create.</li>
+  <li>Click <b>OK</b> to close the dialog and create the version.</li>
 </ol>
+<p><b>Tip</b>:&nbsp; You can browse existing versions of your project by clicking 
+  on the <b>Details</b> button in the Tag Resources dialog. Clicking <b>Refresh 
+  from Repository</b> should populate the Existing Versions list. It is sometimes 
+  helpful to see existing versions before naming your new version.</p>
+<p></p>
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
