initial template tt

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
@@ -9,12 +9,32 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Templates</H1>
-<P>&nbsp;<br>
-  <img src=" ../ngibmcpy.gif"> </P>
+<P>&nbsp;</P>
+<ul>
+  <li> Templates try to guess the variable name. For instance, if you have an 
+    array called foos, the for template will notice this:</li>
+</ul>
 
-
-
-
-
+<code>void m(int[] foos){<br>
+&nbsp;for&lt;&lt;press Ctrl+Space here to enter the <b>for - iterate over array</b> template<br>
+}</code><br>
+<p>
+<p>you get:</p>
+<p> <code>void m(int[] foos){<br>
+  &nbsp;for (int i= 0; i &lt; foos.length; i++) {<br>
+  <br>
+  &nbsp;}<br>
+  }</code></p>
+<ul>
+  <li>You can define your own templates. Go to <b>Window &gt; Preferences &gt; 
+    Java &gt; Templates</b> and press the <b>New</b> button.</li>
+  <li>In template definitions, $ must be escaped by another $. So you write $$Log:$$ 
+    if you want $Log:$ to appear in the editor.</li>
+</ul>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<ul>
+  <img src=" ../ngibmcpy.gif"> 
+</ul>
 </BODY>
 </HTML>
